sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departspeed' in definition of a vehicle is empty.
Error: Invalid departspeed definition for vehicle '1'
Quitting (on error).
